--- a/render.yaml
+++ b/render.yaml
@@ -5,8 +5,7 @@ services:
     dockerfilePath: ./Dockerfile.prod
     plan: starter
     region: frankfurt
-    buildCommand: yarn install && yarn build
-    startCommand: yarn start
+    buildCommand: npm install && npm build
     healthCheckPath: /_health
     disk:
       name: a-store-uploads
